--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     align-items: center;
     list-style: none;
 }
-.navbar li {
+.navbar li , footer ul li {
     margin-right: 20px;
 }
 .navbar li a {
@@ -33,7 +33,6 @@ body {
     background-color: #6ED0FF;
 }
 .active {
-    /* background-color: white; */
     color: black;
 }
 .logo {
@@ -56,7 +55,6 @@ body {
 h1 {
     font-size: 50px !important;
     font-weight: 900 !important;
-    /* font-family: "Barlow", sans-serif; */
     font-family: "Fraunces", serif !important;
     word-spacing: 15px !important;
     color: white !important;
@@ -150,18 +148,43 @@ h1 {
 .fourth-section {
     width: 100% !important;
     margin: 0 !important;
+    position: relative;
 }
 .fourth-img , .fifth-img {
     width: 100% !important;
 }
+.text {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center !important;
+}
+.graphic {
+    color:  hsl(167, 40%, 24%) !important;
+    margin-bottom: 20px !important;
+    font-family: "Fraunces", serif !important;
+    font-weight: bolder !important;
+    font-optical-sizing: none !important;
+}
+.graphic-desc {
+    color:  hsl(167, 40%, 24%) !important;
+    font-size: 19px !important;
+    font-weight: 500 !important;
+}
+.photography {
+    color: hsl(198, 62%, 26%);
+    margin-bottom: 20px !important;
+    font-family: "Fraunces", serif !important;
+    font-weight: bolder !important;
+}
 
 
-
-
-
-
-
-
+.photography-desc {
+    color: hsl(198, 62%, 26%);
+    font-size: 19px !important;
+    font-weight: 500 !important;
+}
 
 
 .fifth-section {
@@ -171,11 +194,13 @@ h1 {
     text-align: center;
     background-color:  hsl(0, 0%, 100%);
 } 
+
+
 .clients {
     display: grid;
     margin: 0 !important;
 }
-h3 {
+.title {
     font-weight: 900 !important;
     font-variation-settings: "soft" 100 !important;
     color:hsl(210, 4%, 67%) !important;
@@ -205,4 +230,56 @@ h3 {
 .client-position {
     font-size: 14px !important;
     color: hsl(210, 4%, 67%) !important;
+}
+
+.images-section {
+    width: 100% !important;
+    margin: 0 !important;
+}
+.images-section img {
+    width: 100%;
+}
+.images-section div {
+    padding: 0 !important;
+}
+.roww {
+    margin: 0 !important;
+}
+footer {
+    width: 100%;
+    background-color: #90D4C5;
+    color:  hsl(168, 34%, 41%);
+    display: grid !important;
+    justify-content: center; 
+    text-align: center;
+    height:250px ;
+    align-items: center;
+}
+.footer-logo {
+    margin-top: 30px !important;
+    margin-bottom: -20px !important;
+    color:hsl(168, 34%, 35%);
+    font-weight: 900 !important;
+    font-size: 25px !important;
+    font-family: "Barlow", sans-serif;
+
+}
+footer ul {
+    display: flex;
+    list-style: none;
+    margin: 0 !important;
+    padding-left: 0 !important;
+}
+footer ul li a {
+    color:   hsl(168, 34%, 35%);
+    text-decoration: none !important;
+    font-size: 16px;
+    padding: 6px 15px;
+}
+.icons a {
+    margin-right: 20px !important;
+}
+.icons a img {
+    width: 17px;
+    height: 17px;
 }
