--- a/style.css
+++ b/style.css
@@ -8,10 +8,12 @@ body {
     position: absolute;
     width: 95%;
     z-index: 10;
+    margin: 30px !important;
+}
+.header-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 30px;
 }
 .navbarr {
     display: flex;
@@ -39,8 +41,6 @@ body {
     margin-left: 30px;
 }
 .first-section {
-    /* background-image: url(./images/desktop/image-header.jpg) !important;
-    background-position:center !important; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -100,7 +100,7 @@ h1 {
 }
 .desc-2 {
     padding-top: 150px !important;
-    padding-bottom: 100px !important;
+    padding-bottom: 90px !important;
     padding-right: 200px !important;
     padding-left: 135px !important;
     font-family: "Fraunces", serif !important;
@@ -155,11 +155,22 @@ h1 {
 .fourth-img , .fifth-img {
     width: 100% !important;
 }
-.text {
+.s-4 {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+.text-1 {
+    width: 65%;
     position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 65%;
+    left: 15%;
+    text-align: center !important;
+}
+.text-2 {
+    width: 60%;
+    position: absolute;
+    top: 65%;
+    left: 20%;
     text-align: center !important;
 }
 .graphic {
@@ -180,8 +191,6 @@ h1 {
     font-family: "Fraunces", serif !important;
     font-weight: bolder !important;
 }
-
-
 .photography-desc {
     color: hsl(198, 62%, 26%);
     font-size: 19px !important;
@@ -295,6 +304,122 @@ footer ul li a {
 
 
 
+@media screen and (min-width: 376px) and (max-width: 768px) {
+    body {
+        width: 100%;
+        margin: 0 !important;
+
+    }
+    .header {
+        position: absolute;
+        width: 100%;
+        margin: 0 !important;
+    }
+    .header-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .navbarr {
+        display: flex !important;
+        justify-content: space-between;
+        align-items: center;
+        list-style: none;
+        margin: 0 !important;
+        padding: 0 !important;
+    }
+    .logo {
+        margin: 30px;
+    }
+    .first-section {
+        height: 80vh;
+    }
+    .first-img {
+        position: absolute;
+        width: 100% !important;
+        height: 100%;
+        object-fit: cover !important;
+    }
+    h1 {
+        font-size: 30px !important;
+        width: 450px !important;
+
+    }
+    .second-section , .third-section , .fourth-section {
+        height: 50vh ;
+    }
+    .second-img , .third-img {
+        width: 100%;
+        height: 100%;
+    }
+    .desc , .desc-2 {
+        padding-top: 40px !important;
+        padding-bottom: 25px !important;
+        padding-left: 35px !important;
+        padding-right: 20px !important;
+        width: 50% !important;
+    }
+
+    .fourth-img , .fifth-img {
+        width: 100% !important;
+        height: 100% !important;
+    }
+    .text-2 {
+        width: 80% !important;
+        top: 65%;
+        left: 10%;
+    }
+    .text-1 {
+        width: 80% !important;
+        top: 63%;
+        left: 10%;
+
+    }
+    .graphic , .photography{
+        margin-bottom: 5px !important;
+    }
+    .graphic-desc , .photography-desc {
+        font-size: 14px !important;
+    }
+
+
+    .fifth-section {
+        width: 100% !important;
+        margin: 0 !important;
+    } 
+    .title {
+        padding-top: 60px  !important;
+        padding-bottom: 50px !important;
+        margin: 0 !important;
+    }
+
+    .client-1 {
+        margin: 0 !important;
+    }
+    .clients {
+        display: flex !important;
+        align-items: center !important;
+        justify-content:space-evenly ;
+    }
+    .client-desc {
+        justify-content: center;
+        padding-top: 15px !important;
+        margin: 0 !important;
+        font-size: 13px;
+        text-align: center;
+    }
+    .client-position {
+        font-size: 12px !important;
+    }
+
+}
+
+
+
+
+
+
+
 
 
 
@@ -305,7 +430,7 @@ footer ul li a {
 
 @media screen and (max-width: 375px) {
 body {
-    width: 375px !important;
+    width: 100% !important;
     margin: 0 !important;
     font-family: "Fraunces", serif !important;
     font-weight: 600;
@@ -313,26 +438,26 @@ body {
 }
 .header {
     position: absolute;
-    width: 95%;
+    width: 100%;
     z-index: 10;
-    display: flex;
     align-items: center;
+    margin: 0 !important;
+    display: block;
 }
 .navbarr {
     display: none !important;
 }
 .navbar {
-    display: flex !important;
     color: white !important;
     display: block !important;
     justify-content: space-between;
     align-items: center;
-    /* padding: 0px !important; */
+    padding: 0px !important;
     position: relative;
 }
 
 .logo {
-    margin-left: 10px;
+    padding-left: 2px;
 }
 .first-section {
     display: flex !important;
@@ -347,7 +472,7 @@ body {
 }
 .first-img-1 {
     display: block !important;
-    width: 375px !important;
+    width: 100% !important;
     height: 100%;
     position:absolute;
 }
@@ -381,6 +506,9 @@ h1 {
 .second-section , .third-section {
     margin: 0 !important;
     width: 100% !important;
+    height: fit-content;
+    display: flex !important;
+
 }
 .col-6 {
     margin: 0 !important;
@@ -395,18 +523,17 @@ h1 {
     height: 340px;
     object-fit: cover;
 }
-.desc ,.desc-2 {
+.desc , .desc-2 {
+    display: block;
     height: 340px;
     text-align: center;
     padding-top: 50px !important;
     padding-bottom: 50px !important;
     padding-left: 20px !important;
     padding-right: 20px !important;
-    font-family: "Fraunces", serif !important;
 }
 .desc h2 {
     margin-left: 25px;
-
     width:280px !important;
     color: hsl(212, 27%, 19%);
 }
@@ -423,16 +550,12 @@ h1 {
     font-size: 17px;
 }
 
-
-
-
-
-
 .fourth-section {
     position: relative !important;
     text-align: center !important;
     margin: 0 !important;
     width: 100% !important;
+    height: fit-content;
 }
 
 .fourth-img , .fifth-img {
@@ -445,17 +568,9 @@ h1 {
     height: 600px;
     object-fit: cover;
 }
-
-
-.col-xs-12 {
-    margin: 0 !important;
-    padding: 0 !important;
-}
-
-.text {
+.text-1 , .text-2 {
     position: absolute;
-    top: 80%;
-    margin-right: -130px;
+    top: 70%;
     text-align: center !important;
 }
 .graphic {
@@ -494,32 +609,19 @@ h1 {
     height: fit-content;
     margin: 0 !important;
     text-align: center;
-    background-color:  hsl(0, 0%, 100%);
 } 
-
-
-.clients {
-    margin: 0 !important;
-}
 .title {
-    font-size: larger;
-    font-weight: 900 !important;
-    font-variation-settings: "soft" 100 !important;
-    color:hsl(210, 4%, 67%) !important;
-    text-align: center !important;
-    margin-top: 70px  !important;
-    margin-bottom: 50px !important;
-    text-transform: uppercase;
-    word-spacing: 7px !important;
+    font-size: large;
+    padding-top: 50px  !important;
+    padding-bottom:20px !important;
+    margin: 0 !important;
+    letter-spacing:3px ;
+
 }
-.client-img {
-    width: 50px;
-    border-radius: 50px !important;
-}
+
+
 .client-desc {
     margin-top: 20px !important;
-    color:  hsl(198, 62%, 26%);
-    font-family: "Barlow", sans-serif;
     font-size: 17px;
     text-align: center !important;
 }
@@ -529,20 +631,10 @@ h1 {
 
 .client-position {
     font-size: 13px !important;
-    color: hsl(210, 4%, 67%) !important;
 }
 
-.images-section {
-    width: 100% !important;
-    margin: 0 !important;
+.header-content{
+    display: none !important;
 }
-.images-section img {
-    width: 100% !important;
-}
-.images-section div {
-    padding: 0 !important;
-}
-.roww {
-    margin: 0 !important;
-}
+
 }
